...
    <!-- RECYCLER VIEW WEATHER LIST -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/fragment_home_swipe_refresh_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_home_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <ProgressBar
...
