...
                        app:graphBackgroundColor="@color/white"
                        app:gridClippingEnabled="false"
                        app:title="Temperature"/>


                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fragment_forecast_rv"
                        android:layout_below="@+id/fragment_forecast_plot"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>

...
